Updated icon for regular income tab

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </div>
             </section>
             <section id="income-tab" class="hide">
-                <h2><i class="fas fa-shopping-basket"></i> Regular Income</h2>
+                <h2><i class="fas fa-piggy-bank"></i> Regular Income</h2>
                 <div class="form-row">
                     <p>Please enter any regular income transactions you have, inputting the
                         estimated amount and how often they take place.</p>
