replaced onclick events with addEventListener

--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
                         </select>
                     </div>
                     <div class="form-group col-4 col-md-2 col-lg-1 add-remove-btns text-md-right">
-                        <a href="#" onclick="addFormRow(this);">
+                        <a href="#">
                             <i class="fas fa-plus mr-2"></i>
                         </a>
-                        <a href="#" onclick="removeFormRow(this);">
+                        <a href="#">
                             <i class="far fa-trash-alt"></i>
                         </a>
                     </div>
@@ -132,10 +132,10 @@
                         </select>
                     </div>
                     <div class="form-group col-4 col-md-2 col-lg-1 add-remove-btns text-md-right">
-                        <a href="#" onclick="addFormRow(this);">
+                        <a href="#">
                             <i class="fas fa-plus mr-2"></i>
                         </a>
-                        <a href="#" onclick="removeFormRow(this);">
+                        <a href="#">
                             <i class="far fa-trash-alt"></i>
                         </a>
 
@@ -181,10 +181,10 @@
                         </select>
                     </div>
                     <div class="form-group col-4 col-md-2 add-remove-btns text-md-right">
-                        <a href="#" onclick="addFormRow(this);">
+                        <a href="#">
                             <i class="fas fa-plus mr-2"></i>
                         </a>
-                        <a href="#" onclick="removeFormRow(this);">
+                        <a href="#">
                             <i class="far fa-trash-alt"></i>
                         </a>
 
@@ -196,10 +196,8 @@
 
             <section id="navigation">
                 <div class="form-group">
-                    <button type="button" class="btn btn-primary hide" id="prev-btn"
-                        onclick="navigateTabs('prev')">Previous</button>
-                    <button type="button" class="btn btn-primary" id="next-btn"
-                        onclick="navigateTabs('next');">Next</button>
+                    <button type="button" class="btn btn-primary hide" id="prev-btn">Previous</button>
+                    <button type="button" class="btn btn-primary" id="next-btn">Next</button>
                     <button type="submit" class="btn btn-primary hide" id="submit-btn">Submit</button>
                 </div>
             </section>
