--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                 </div>
                 <div class="form-row" id="account-fields-1">
                     <div class="form-group col-12 col-lg-4">
-                        <input type="text" name="account-label-1" class="form-control form-control-sm"
-                            id="account-label-1" placeholder="Description">
+                        <input type="text" name="account-description-1" class="form-control form-control-sm"
+                            id="account-description-1" placeholder="Description">
                     </div>
 
                     <div class="form-group col-12 col-md-5 col-lg-3">
@@ -112,8 +112,8 @@
                 </div>
                 <div class="form-row" id="income-fields-1" class="mt-3 mt-md-0">
                     <div class="form-group col-12 col-lg-4">
-                        <input type="text" name="income-label-1" class="form-control form-control-sm"
-                            id="income-label-1" placeholder="Description">
+                        <input type="text" name="income-description-1" class="form-control form-control-sm"
+                            id="income-description-1" placeholder="Description">
                     </div>
 
                     <div class="form-group col-12 col-md-5 col-lg-3">
@@ -151,8 +151,8 @@
                 </div>
                 <div class="form-row" id="outgoing-fields-1" class="mt-3 mt-md-0">
                     <div class="form-group col-12 col-md-7">
-                        <input type="text" name="outgoing-label-1" class="form-control form-control-sm"
-                            id="outgoing-label-1" placeholder="Description">
+                        <input type="text" name="outgoing-description-1" class="form-control form-control-sm"
+                            id="outgoing-description-1" placeholder="Description">
                     </div>
 
                     <div class="form-group col-md-5">
@@ -193,7 +193,7 @@
                 </div>
             </section>
             <section id="summary-tab" class="hide"></section>
-
+            <section id="error-messages" class="hide"></section>
             <section id="navigation">
                 <div class="form-group">
                     <button type="button" class="btn btn-primary hide" id="prev-btn">Previous</button>
