--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
                             id="account-amount-1" placeholder="Account balance">
                     </div>
                     <div class="form-group col-12 col-md-5 col-lg-4">
-                        <select class="custom-select custom-select-sm" name="account-frequency-1"
-                            id="account-frequency-1">
+                        <select class="custom-select custom-select-sm" name="account-type-1" id="account-type-1">
                             <option value="">Type of account</option>
                             <option value="current">Current Account</option>
                             <option value="saving">Savings Account</option>
