--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <title>Financial Projections</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/dc/2.1.8/dc.min.css" />
     <link rel="stylesheet" href="css/main.css">
     <script src="https://kit.fontawesome.com/6cef40e88b.js"></script>
+
 </head>
 
 <body class="container">
@@ -56,15 +58,6 @@
                             placeholder="Goal Amount">
                     </div>
                 </div>
-                <div class="form-row">
-                    <div class="form-group col-12 col-md-6">
-                        <select class="custom-select custom-select-sm" name="currency" id="currency">
-                            <option value="">Please select your preferred currency</option>
-                            <option value="1">Currency 1</option>
-                            <option value="2">Currency 2</option>
-                        </select>
-                    </div>
-                </div>
             </section>
             <section id="account-tab" class="hide">
                 <h2><i class="fas fa-credit-card"></i> Accounts</h2>
@@ -72,7 +65,7 @@
                     <p>Please enter all of your bank accounts, loans, credit card accounts, etc., and the current
                         balance of each as they are today.</p>
                 </div>
-                <div class="form-row" id="account-fields-1">
+                <div id="account-fields-1" class="form-row">
                     <div class="form-group col-12 col-lg-4">
                         <input type="text" name="account-description-1" class="form-control form-control-sm"
                             id="account-description-1" placeholder="Description">
@@ -85,11 +78,8 @@
                     <div class="form-group col-12 col-md-5 col-lg-4">
                         <select class="custom-select custom-select-sm" name="account-type-1" id="account-type-1">
                             <option value="">Type of account</option>
-                            <option value="current">Current Account</option>
-                            <option value="saving">Savings Account</option>
-                            <option value="cc">Credit Card</option>
-                            <option value="investment">Investments</option>
-                            <option value="other">Other</option>
+                            <option value="asset">Asset</option>
+                            <option value="liability">Liability (Debt)</option>
                         </select>
                     </div>
                     <div class="form-group col-4 col-md-2 col-lg-1 add-remove-btns text-md-right">
@@ -109,20 +99,26 @@
                     <p>Please enter any regular income transactions you have, inputting the
                         estimated amount and how often they take place.</p>
                 </div>
-                <div class="form-row" id="income-fields-1" class="mt-3 mt-md-0">
-                    <div class="form-group col-12 col-lg-4">
+                <div id="income-fields-1" class="form-row mt-3 mt-md-0">
+                    <div class="form-group col-12 col-md-9 col-lg-3">
                         <input type="text" name="income-description-1" class="form-control form-control-sm"
                             id="income-description-1" placeholder="Description">
                     </div>
 
-                    <div class="form-group col-12 col-md-5 col-lg-3">
+                    <div class="form-group col-12 col-md-3 col-lg-2">
                         <input type="text" name="income-amount-1" class="form-control form-control-sm col"
                             id="income-amount-1" placeholder="Income amount">
                     </div>
-                    <div class="form-group col-12 col-md-5 col-lg-4">
+                    <div class="form-group col-12 col-md-5 col-lg-3">
+                        <input type="text" name="income-end-date-1"
+                            class="form-control form-control-sm col form_datetime" id="income-end-date-1" readonly
+                            placeholder="Date income source ends">
+                    </div>
+                    <div class="form-group col-12 col-md-5 col-lg-3">
                         <select class="custom-select custom-select-sm" name="income-frequency-1"
                             id="income-frequency-1">
                             <option value="">How often does this take place</option>
+                            <option value="once">One off</option>
                             <option value="7">Every 1 week</option>
                             <option value="14">Every 2 weeks</option>
                             <option value="28">Every 4 weeks</option>
@@ -148,7 +144,7 @@
                     <p>Please enter any regular outgoing transactions you have, inputting the
                         estimated amount and how often they take place.</p>
                 </div>
-                <div class="form-row" id="outgoing-fields-1" class="mt-3 mt-md-0">
+                <div id="outgoing-fields-1" class="form-row mt-3 mt-md-0">
                     <div class="form-group col-12 col-md-7">
                         <input type="text" name="outgoing-description-1" class="form-control form-control-sm"
                             id="outgoing-description-1" placeholder="Description">
@@ -162,6 +158,7 @@
                         <select class="custom-select custom-select-sm" name="outgoing-frequency-1"
                             id="outgoing-frequency-1">
                             <option value="">How often does this take place</option>
+                            <option value="once">One off</option>
                             <option value="7">Every 1 week</option>
                             <option value="14">Every 2 weeks</option>
                             <option value="28">Every 4 weeks</option>
@@ -191,7 +188,9 @@
                     <div class="input-end"></div>
                 </div>
             </section>
-            <section id="summary-tab" class="hide"></section>
+            <section id="summary-tab" class="hide">
+                <!-- <div id="netWorthChart"></div> -->
+            </section>
             <section id="error-messages" class="hide"></section>
             <section id="navigation">
                 <div class="form-group">
@@ -206,8 +205,14 @@
 
 
 
-
+    <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>  -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/dc/2.1.8/dc.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/charts.js"></script>
     <script src="js/testdata.js"></script>
 
 </body>
