--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
                         <input type="text" name="income-amount-1" class="form-control form-control-sm col"
                             id="income-amount-1" placeholder="Income amount">
                     </div>
-                    <div class="form-group col-12 col-md-5 col-lg-3">
+                    <!-- <div class="form-group col-12 col-md-5 col-lg-3">
                         <input type="text" name="income-end-date-1"
                             class="form-control form-control-sm col form_datetime" id="income-end-date-1" readonly
                             placeholder="Date income source ends">
-                    </div>
+                    </div> -->
                     <div class="form-group col-12 col-md-5 col-lg-3">
                         <select class="custom-select custom-select-sm" name="income-frequency-1"
                             id="income-frequency-1">
@@ -211,9 +211,9 @@
     <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/dc/2.1.8/dc.js"></script>
+    <script src="js/form.js"></script>
+    <script src="js/data.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/charts.js"></script>
-    <script src="js/testdata.js"></script>
 
 </body>
 
