--- a/index.html
+++ b/index.html
@@ -59,137 +59,139 @@
                     </div>
                 </div>
             </section>
-            <section id="account-tab" class="hide">
-                <h2><i class="fas fa-credit-card"></i> Accounts</h2>
-                <div class="form-row">
-                    <p>Please enter all of your bank accounts, loans, credit card accounts, etc., and the current
-                        balance of each as they are today.</p>
-                </div>
-                <div id="account-fields-1" class="form-row">
-                    <div class="form-group col-12 col-lg-4">
-                        <input type="text" name="account-description-1" class="form-control form-control-sm"
-                            id="account-description-1" placeholder="Description">
+            <section id="financials">
+                <section id="account-tab" class="hide">
+                    <h2><i class="fas fa-credit-card"></i> Accounts</h2>
+                    <div class="form-row">
+                        <p>Please enter all of your bank accounts, loans, credit card accounts, etc., and the current
+                            balance of each as they are today.</p>
                     </div>
+                    <div id="account-fields-1" class="form-row">
+                        <div class="form-group col-12 col-lg-4">
+                            <input type="text" name="account-description-1" class="form-control form-control-sm"
+                                id="account-description-1" placeholder="Description">
+                        </div>
 
-                    <div class="form-group col-12 col-md-5 col-lg-3">
-                        <input type="text" name="account-amount-1" class="form-control form-control-sm col"
-                            id="account-amount-1" placeholder="Account balance">
+                        <div class="form-group col-12 col-md-5 col-lg-3">
+                            <input type="text" name="account-amount-1" class="form-control form-control-sm col"
+                                id="account-amount-1" placeholder="Account balance">
+                        </div>
+                        <div class="form-group col-12 col-md-5 col-lg-4">
+                            <select class="custom-select custom-select-sm" name="account-type-1" id="account-type-1">
+                                <option value="">Type of account</option>
+                                <option value="asset">Asset</option>
+                                <option value="liability">Liability (Debt)</option>
+                            </select>
+                        </div>
+                        <div class="form-group col-4 col-md-2 col-lg-1 add-remove-btns text-md-right">
+                            <a href="#">
+                                <i class="fas fa-plus mr-2"></i>
+                            </a>
+                            <a href="#">
+                                <i class="far fa-trash-alt"></i>
+                            </a>
+                        </div>
+                        <div class="input-end"></div>
                     </div>
-                    <div class="form-group col-12 col-md-5 col-lg-4">
-                        <select class="custom-select custom-select-sm" name="account-type-1" id="account-type-1">
-                            <option value="">Type of account</option>
-                            <option value="asset">Asset</option>
-                            <option value="liability">Liability (Debt)</option>
-                        </select>
+                </section>
+                <section id="income-tab" class="hide">
+                    <h2><i class="fas fa-piggy-bank"></i> Regular Income</h2>
+                    <div class="form-row">
+                        <p>Please enter any regular income transactions you have, inputting the
+                            estimated amount and how often they take place.</p>
                     </div>
-                    <div class="form-group col-4 col-md-2 col-lg-1 add-remove-btns text-md-right">
-                        <a href="#">
-                            <i class="fas fa-plus mr-2"></i>
-                        </a>
-                        <a href="#">
-                            <i class="far fa-trash-alt"></i>
-                        </a>
-                    </div>
-                    <div class="input-end"></div>
-                </div>
-            </section>
-            <section id="income-tab" class="hide">
-                <h2><i class="fas fa-piggy-bank"></i> Regular Income</h2>
-                <div class="form-row">
-                    <p>Please enter any regular income transactions you have, inputting the
-                        estimated amount and how often they take place.</p>
-                </div>
-                <div id="income-fields-1" class="form-row mt-3 mt-md-0">
-                    <div class="form-group col-12 col-md-9 col-lg-3">
-                        <input type="text" name="income-description-1" class="form-control form-control-sm"
-                            id="income-description-1" placeholder="Description">
-                    </div>
+                    <div id="income-fields-1" class="form-row mt-3 mt-md-0">
+                        <div class="form-group col-12 col-md-9 col-lg-3">
+                            <input type="text" name="income-description-1" class="form-control form-control-sm"
+                                id="income-description-1" placeholder="Description">
+                        </div>
 
-                    <div class="form-group col-12 col-md-3 col-lg-2">
-                        <input type="text" name="income-amount-1" class="form-control form-control-sm col"
-                            id="income-amount-1" placeholder="Income amount">
-                    </div>
-                    <!-- <div class="form-group col-12 col-md-5 col-lg-3">
-                        <input type="text" name="income-end-date-1"
-                            class="form-control form-control-sm col form_datetime" id="income-end-date-1" readonly
-                            placeholder="Date income source ends">
-                    </div> -->
-                    <div class="form-group col-12 col-md-5 col-lg-3">
-                        <select class="custom-select custom-select-sm" name="income-frequency-1"
-                            id="income-frequency-1">
-                            <option value="">How often does this take place</option>
-                            <option value="once">One off</option>
-                            <option value="7">Every 1 week</option>
-                            <option value="14">Every 2 weeks</option>
-                            <option value="28">Every 4 weeks</option>
-                            <option value="30">Every 1 month</option>
-                            <option value="60">Every 2 months</option>
-                        </select>
-                    </div>
-                    <div class="form-group col-4 col-md-2 col-lg-1 add-remove-btns text-md-right">
-                        <a href="#">
-                            <i class="fas fa-plus mr-2"></i>
-                        </a>
-                        <a href="#">
-                            <i class="far fa-trash-alt"></i>
-                        </a>
+                        <div class="form-group col-12 col-md-3 col-lg-2">
+                            <input type="text" name="income-amount-1" class="form-control form-control-sm col"
+                                id="income-amount-1" placeholder="Income amount">
+                        </div>
+                        <!-- <div class="form-group col-12 col-md-5 col-lg-3">
+                            <input type="text" name="income-end-date-1"
+                                class="form-control form-control-sm col form_datetime" id="income-end-date-1" readonly
+                                placeholder="Date income source ends">
+                        </div> -->
+                        <div class="form-group col-12 col-md-5 col-lg-3">
+                            <select class="custom-select custom-select-sm" name="income-frequency-1"
+                                id="income-frequency-1">
+                                <option value="">How often does this take place</option>
+                                <option value="once">One off</option>
+                                <option value="7">Every 1 week</option>
+                                <option value="14">Every 2 weeks</option>
+                                <option value="28">Every 4 weeks</option>
+                                <option value="30">Every 1 month</option>
+                                <option value="60">Every 2 months</option>
+                            </select>
+                        </div>
+                        <div class="form-group col-4 col-md-2 col-lg-1 add-remove-btns text-md-right">
+                            <a href="#">
+                                <i class="fas fa-plus mr-2"></i>
+                            </a>
+                            <a href="#">
+                                <i class="far fa-trash-alt"></i>
+                            </a>
 
+                        </div>
+                        <div class="input-end"></div>
                     </div>
-                    <div class="input-end"></div>
-                </div>
-            </section>
-            <section id="outgoing-tab" class="hide">
-                <h2><i class="fas fa-shopping-basket"></i> Regular Outgoing(s)</h2>
-                <div class="form-row">
-                    <p>Please enter any regular outgoing transactions you have, inputting the
-                        estimated amount and how often they take place.</p>
-                </div>
-                <div id="outgoing-fields-1" class="form-row mt-3 mt-md-0">
-                    <div class="form-group col-12 col-md-7">
-                        <input type="text" name="outgoing-description-1" class="form-control form-control-sm"
-                            id="outgoing-description-1" placeholder="Description">
+                </section>
+                <section id="outgoing-tab" class="hide">
+                    <h2><i class="fas fa-shopping-basket"></i> Regular Outgoing(s)</h2>
+                    <div class="form-row">
+                        <p>Please enter any regular outgoing transactions you have, inputting the
+                            estimated amount and how often they take place.</p>
                     </div>
+                    <div id="outgoing-fields-1" class="form-row mt-3 mt-md-0">
+                        <div class="form-group col-12 col-md-7">
+                            <input type="text" name="outgoing-description-1" class="form-control form-control-sm"
+                                id="outgoing-description-1" placeholder="Description">
+                        </div>
 
-                    <div class="form-group col-md-5">
-                        <input type="text" name="outgoing-amount-1" class="form-control form-control-sm"
-                            id="outgoing-amount-1" placeholder="Outgoing amount">
-                    </div>
-                    <div class="form-group col-12 col-md-5">
-                        <select class="custom-select custom-select-sm" name="outgoing-frequency-1"
-                            id="outgoing-frequency-1">
-                            <option value="">How often does this take place</option>
-                            <option value="once">One off</option>
-                            <option value="7">Every 1 week</option>
-                            <option value="14">Every 2 weeks</option>
-                            <option value="28">Every 4 weeks</option>
-                            <option value="30">Every 1 month</option>
-                            <option value="60">Every 2 months</option>
-                        </select>
-                    </div>
-                    <div class="form-group col-12 col-md-5">
-                        <select class="custom-select custom-select-sm" name="outgoing-type-1" id="outgoing-type-1">
-                            <option value="">Type of outgoing transaction</option>
-                            <option value="bill">Bill</option>
-                            <option value="loan">Loan</option>
-                            <option value="cc">Credit Card</option>
-                            <option value="rent">Rent/Mortgage</option>
-                            <option value="other">Other</option>
-                        </select>
-                    </div>
-                    <div class="form-group col-4 col-md-2 add-remove-btns text-md-right">
-                        <a href="#">
-                            <i class="fas fa-plus mr-2"></i>
-                        </a>
-                        <a href="#">
-                            <i class="far fa-trash-alt"></i>
-                        </a>
+                        <div class="form-group col-md-5">
+                            <input type="text" name="outgoing-amount-1" class="form-control form-control-sm"
+                                id="outgoing-amount-1" placeholder="Outgoing amount">
+                        </div>
+                        <div class="form-group col-12 col-md-5">
+                            <select class="custom-select custom-select-sm" name="outgoing-frequency-1"
+                                id="outgoing-frequency-1">
+                                <option value="">How often does this take place</option>
+                                <option value="once">One off</option>
+                                <option value="7">Every 1 week</option>
+                                <option value="14">Every 2 weeks</option>
+                                <option value="28">Every 4 weeks</option>
+                                <option value="30">Every 1 month</option>
+                                <option value="60">Every 2 months</option>
+                            </select>
+                        </div>
+                        <div class="form-group col-12 col-md-5">
+                            <select class="custom-select custom-select-sm" name="outgoing-type-1" id="outgoing-type-1">
+                                <option value="">Type of outgoing transaction</option>
+                                <option value="bill">Bill</option>
+                                <option value="loan">Loan</option>
+                                <option value="cc">Credit Card</option>
+                                <option value="rent">Rent/Mortgage</option>
+                                <option value="other">Other</option>
+                            </select>
+                        </div>
+                        <div class="form-group col-4 col-md-2 add-remove-btns text-md-right">
+                            <a href="#">
+                                <i class="fas fa-plus mr-2"></i>
+                            </a>
+                            <a href="#">
+                                <i class="far fa-trash-alt"></i>
+                            </a>
 
+                        </div>
+                        <div class="input-end"></div>
                     </div>
-                    <div class="input-end"></div>
-                </div>
+                </section>
             </section>
             <section id="summary-tab" class="hide">
-                <!-- <div id="netWorthChart"></div> -->
+                <div id="netWorthChart"></div>
             </section>
             <section id="error-messages" class="hide"></section>
             <section id="navigation">
@@ -207,12 +209,10 @@
 
     <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>  -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
-    <script type="text/javascript"
-        src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/dc/2.1.8/dc.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.12.0/d3.min.js" integrity="sha256-+9Mf3cAVmxxudDsr1XwXUeRZFtvdWVYdq5/vcgiYyNU=" crossorigin="anonymous"></script>
     <script src="js/form.js"></script>
     <script src="js/data.js"></script>
+    <script src="js/charts.js"></script>
     <script src="js/main.js"></script>
 
 </body>
