Additional user information added

--- a/index.html
+++ b/index.html
@@ -109,6 +109,11 @@
 					<div class="form-row">
 						<p>Please enter any regular income transactions you have, inputting the
 							estimated amount and how often they take place.</p>
+						<p><strong>Please note:</strong> all one-off transactions will take place 14 days after the
+							start date. All
+							recurring transactions will take place as per the frequency selected - the start date will
+							act
+							as time zero.</p>
 					</div>
 					<div id="income-fields-1" class="form-row mt-3 mt-md-0">
 						<div class="form-group col-12 col-md-4 col-lg-5">
@@ -153,6 +158,11 @@
 					<div class="form-row">
 						<p>Please enter any regular outgoing transactions you have, inputting the
 							estimated amount and how often they take place.</p>
+						<p><strong>Please note:</strong> all one-off transactions will take place 14 days after the
+							start date. All
+							recurring transactions will take place as per the frequency selected - the start date will
+							act
+							as time zero.</p>
 					</div>
 					<div id="outgoing-fields-1" class="form-row mt-3 mt-md-0">
 						<div class="form-group col-12 col-md-7">
